fix: use utils for better separation of concern.